--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
           <div class="snake-head"></div>
           <span class="snake-body-container">
             <div class="snake-body-part"></div>
-            <div class="snake-body-part"></div>
-            <div class="snake-body-part"></div>
-            <div class="snake-body-part"></div>
           </span>
-          <div class="snake-tail"></div>
+          <!-- <div class="snake-tail"></div> -->
         </div>
       </div>
       <hr />
       <div class="fotter">
-        <span class="score">0wss00</span>
+        score:<span class="score"></span>
       </div>
     </div>
     <script src="js/main.js"></script>
