make wall and snake die in colision him self and colision walls

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
       <div class="game-flow">
         <div class="snake">
           <div class="snake-head"></div>
-          <span class="snake-body-container">
-            <div class="snake-body-part"></div>
-          </span>
-          <!-- <div class="snake-tail"></div> -->
+          <span class="snake-body-container"> </span>
         </div>
+        <div class="walls"></div>
+        <div class="walls"></div>
+        <div class="walls"></div>
+        <div class="walls"></div>
       </div>
+      <br>
+      <br>
+      <br>
       <hr />
-      <div class="fotter">
-        score:<span class="score"></span>
-      </div>
+      <div class="fotter">score:<span class="score"></span></div>
     </div>
     <script src="js/main.js"></script>
   </body>
